--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,8 @@
-body{ width: 100%; height: 100%; margin:0px; background-color: lightblue;}
+body{ box-sizing: border-box; width: 100%; height: 100%; margin:0; padding: 1%; background-color: #18191a;}
 
 /*HEADER*/
 header{
+  width: 100%;
   height: 100%;
   background-color: red;
 }
@@ -9,6 +10,7 @@ header{
 /*NAV*/
 nav{
   display: flex;
+  width: 100%;
   height: 100%;
   background-color: blue;
 }
@@ -27,7 +29,7 @@ nav{
 }
 
 .a1{
-  width: auto;
+  width: 50%;
   height: 50%;
   background-color: grey;
 }
@@ -35,6 +37,7 @@ nav{
 /*FOOTER*/
 footer{
   display: flex;
+  width: 100%;
   height: 100%;
   background-color: orange;
 }
