--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,11 +8,11 @@ body{
 
 /*HEADER Y SUS PARTES*/
 header{
+  box-sizing: border-box;
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: red;
-
+  border: 0.1vw solid powderblue;
 }
 
 .H1{ margin-left: auto; margin-right: auto;}
