--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,7 +12,8 @@ header{
   display: flex;
   width: 100%;
   height: 100%;
-  border: 0.1vw solid powderblue;
+  border-bottom: 0.6vw dashed powderblue;
+  padding-bottom: 1%;
 }
 
 .H1{ width: 50%; margin-left: auto; margin-right: auto;}
@@ -20,31 +21,89 @@ header{
 .logo{ width: 100%; height:100%;}
 
 /*NAV y PARTES*/
-nav{
-  display: flex;
+.navbar {
+  overflow: hidden;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 0.6vw dashed powderblue;
 }
 
-nav ul li{ display: inline-block;}
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+  background-color: red;
+}
+
+.dropdown-content {
+  display: none; /*Con esto se esconde el div con la lista*/
+  position: absolute;/*Esto hace aparecer unicamente la lista, y no alargar el "nav"*/
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.show {
+  display: block;
+}
 
 /*PRIMER SECTION Y PRIMER ASIDE*/
 .S1A1{
   display: flex;
   flex-direction: row;
+  height: 100%;
+  border-bottom: 0.6vw dashed powderblue;
 }
 
 .s1{
-  width: 50%;
-  height: 50%;
-  background-color: green;
+  width: 70%;
+  min-height: 100vh;
+  background-color: #333;
 }
 
 .a1{
-  width: 50%;
-  height: 50%;
-  background-color: grey;
+  width: 30%;
+  min-height: 100vh;
+  border-left:solid 1px black;
+  background-color: #333;
 }
 
 /*FOOTER*/
@@ -52,5 +111,8 @@ footer{
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: orange;
+}
+
+footer div{
+  min-height:25px ;
 }
