--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "delight candles";
+  src: url("../fuentes/DelightCandles.ttf")
+  format("truetype");
+}
+
 body{
   box-sizing: border-box;
   width: 100%; height: 100%;
@@ -33,7 +39,7 @@ header{
 .navbar a {
   float: left;
   font-size: 16px;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -49,22 +55,22 @@ header{
   font-size: 16px;  
   border: none;
   outline: none;
-  color: white;
+  color: black;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
 }
 
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: red;
+.itemNav:hover, .dropbtn:hover {
+  background-color: powderblue;
 }
 
 .dropdown-content {
   display: none; /*Con esto se esconde el div con la lista*/
   position: absolute;/*Esto hace aparecer unicamente la lista, y no alargar el "nav"*/
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 105px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -97,8 +103,20 @@ header{
   width: 70%;
   min-height: 100vh;
   background-color: #333;
+  padding: 0 1% 1% 1%;  
 }
 
+.S1A1 .s1 p{
+  font-size: 20px;
+  font-family: "delight candles";
+}
+.S1A1 .s1 h2{
+  font-size: 1.7em; 
+  font-family: "delight candles";
+  text-decoration: underline powderblue; 
+  text-underline-offset: 10px;
+}
+/**/
 .a1{
   width: 30%;
   min-height: 100vh;
