--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,7 +39,7 @@ header{
 .navbar a {
   float: left;
   font-size: 16px;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -55,7 +55,7 @@ header{
   font-size: 16px;  
   border: none;
   outline: none;
-  color: black;
+  color: white;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
@@ -69,22 +69,22 @@ header{
 .dropdown-content {
   display: none; /*Con esto se esconde el div con la lista*/
   position: absolute;/*Esto hace aparecer unicamente la lista, y no alargar el "nav"*/
-  background-color: #f9f9f9;
   min-width: 105px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown-content a {
   float: none;
-  color: black;
+  color: white;
   padding: 12px 16px;
+  background-color: #333;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  border: 1px solid white;
 }
 
 .show {
@@ -102,6 +102,7 @@ header{
 .s1{
   width: 70%;
   min-height: 100vh;
+  color: white;
   background-color: #333;
   padding: 0 1% 1% 1%;  
 }
@@ -109,13 +110,26 @@ header{
 .S1A1 .s1 p{
   font-size: 20px;
   font-family: "delight candles";
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
+
+.S1A1 .s1 h1{
+  font-size:2em;
+  text-align: center;
+  font-family: "delight candles";
+  text-decoration: underline powderblue; 
+  text-underline-offset: 10px;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
 .S1A1 .s1 h2{
   font-size: 1.7em; 
   font-family: "delight candles";
   text-decoration: underline powderblue; 
   text-underline-offset: 10px;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
+
 /**/
 .a1{
   width: 30%;
