--- a/css/estilos.css
+++ b/css/estilos.css
@@ -138,6 +138,12 @@ header{
   background-color: #333;
 }
 
+@media(max-width: 767px){
+  .s1{
+    color: white;
+  }
+}
+
 /*FOOTER*/
 footer{
   display: flex;
