--- a/css/estilos.css
+++ b/css/estilos.css
@@ -147,6 +147,15 @@ header{
   background-color: #333;
   padding: 0 1% 1% 1%;  
 }
+
+.emuladores{
+  display: none;
+  width: 70%;
+  min-height: 100vh;
+  color: white;
+  background-color: #333;
+  padding: 0 1% 1% 1%; 
+}
 /*COSA EN CELULAR*/
 @media(max-width: 767px){
   .s1{
