--- a/css/estilos.css
+++ b/css/estilos.css
@@ -44,13 +44,13 @@ header{
   padding: 14px 16px;
   text-decoration: none;
 }
-
-.dropdown {
+/*Btones y lista*/
+.emu2 {
   float: left;
   overflow: hidden;
 }
 
-.dropdown .dropbtn {
+.dropdown .dropbtn,.emu2 button {
   cursor: pointer;
   font-size: 16px;  
   border: none;
@@ -62,18 +62,19 @@ header{
   margin: 0;
 }
 
-.itemNav:hover, .dropbtn:hover {
+.itemNav:hover,.emu2 button:hover,.otro a:hover{
   background-color: powderblue;
+  color: #333;
 }
 
-.dropdown-content {
+.otro{
   display: none; /*Con esto se esconde el div con la lista*/
   position: absolute;/*Esto hace aparecer unicamente la lista, y no alargar el "nav"*/
-  min-width: 105px;
+  min-width: 115px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.dropdown-content a {
+.otro a{
   float: none;
   color: white;
   padding: 12px 16px;
@@ -87,9 +88,11 @@ header{
   border: 1px solid white;
 }
 
-.show {
+.emu2:hover > .otro{
   display: block;
+  position: absolute;
 }
+
 
 /*PRIMER SECTION Y PRIMER ASIDE*/
 #S1A1{
@@ -142,6 +145,7 @@ header{
 /*JUEGOS*/
 
 .juegos{
+  cursor: pointer;
   display: none;
   width: 70%;
   min-height: 100vh;
