--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,7 +50,7 @@ header{
   overflow: hidden;
 }
 
-.dropdown .dropbtn,.emu2 button {
+.emu2 button {
   cursor: pointer;
   font-size: 16px;  
   border: none;
@@ -75,6 +75,7 @@ header{
 }
 
 .otro a{
+  cursor: pointer;
   float: none;
   color: white;
   padding: 12px 16px;
@@ -82,10 +83,6 @@ header{
   text-decoration: none;
   display: block;
   text-align: left;
-}
-
-.dropdown-content a:hover {
-  border: 1px solid white;
 }
 
 .emu2:hover > .otro{
@@ -110,13 +107,12 @@ header{
   padding: 0 1% 1% 1%;  
 }
 
-#S1A1 .s1 p{
+#S1A1 section p{
   font-size: 20px;
-  font-family: "delight candles";
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-#S1A1 .s1 h1{
+#S1A1 section h1{
   font-size: 2em;
   text-align: center;
   font-family: "delight candles";
@@ -125,7 +121,7 @@ header{
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-#S1A1 .s1 h2, #S1A1 .a1 h2{
+#S1A1 section h2, #S1A1 .a1 h2 {
   font-size: 1.7em; 
   font-family: "delight candles";
   text-decoration: underline powderblue; 
@@ -162,6 +158,27 @@ header{
   background-color: #333;
   padding: 0 1% 1% 1%; 
 }
+.listaEmu{
+  list-style-type: none;
+  cursor: pointer;
+  text-decoration: underline;
+  padding-left: 0;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+.listaEmu li{ margin-bottom: 3px;}
+/*EMULADOR GBA*/
+.gameboyadvance{
+  display: none;
+  width: 70%;
+  min-height: 100vh;
+  color: white;
+  background-color: #333;
+  padding: 0 1% 1% 1%; 
+}
+a:link, a:visited{
+  color: white;
+}
+a:hover{color: powderblue;}
 /*COSA EN CELULAR*/
 @media(max-width: 767px){
   body{
