--- a/css/estilos.css
+++ b/css/estilos.css
@@ -91,7 +91,7 @@ header{
 }
 
 
-/*PRIMER SECTION Y PRIMER ASIDE*/
+/*ID PARA EL PRIMER SECTION Y PRIMER ASIDE*/
 #S1A1{
   display: flex;
   flex-direction: row;
@@ -129,14 +129,25 @@ header{
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-/**/
+/*ASIDE O RECOMENDACIONES Y sus COSAS*/
 .a1{
+  display: flex;
+  flex-direction: column;
   width: 30%;
   min-height: 100vh;
   color: white;
   border-left:solid 1px black;
   background-color: #333;
   padding: 0 1% 1% 1%;  
+  text-align: center;
+}
+
+.divRec{
+  width: 80%; 
+  margin-left: auto; margin-right: auto;
+}
+.imgRec{
+  width: 100%;
 }
 /*JUEGOS*/
 
@@ -176,7 +187,6 @@ header{
   margin-right: 1%; 
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
-
 /*EMULADORES Y JUEGOS*/
 .gameboyadvance, .superNintendo, .nintendDs, .gbaJuegos, .snesJuegos, .ndsJuegos{
   display: none;
@@ -191,6 +201,17 @@ a:link, a:visited{
 }
 a:hover{color: powderblue;}
 
+/*Cuadros de los EMULADORES*/
+.emuBox{
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  text-align: center;
+}
+.emuBox p{
+  text-align: left; 
+}
+.emuBox a{
+  font-size: 24px;
+}
 /*COSAS DE LOS IFRAMES*/
 iframe{border-width:0px ; width: 100%; height: 100%; min-height: 70vh;}
 /*COSA EN CELULAR*/
