--- a/css/estilos.css
+++ b/css/estilos.css
@@ -229,6 +229,10 @@ footer{
   display: flex;
   width: 100%;
   height: 100%;
+  background-color: #333;
+  color: white;
+  padding-top: 1%; 
+  margin-bottom: -1%; 
 }
 
 footer div{
